Updating DDL script with new columns. Added 3rd stored proc

--- a/P4/P4_SQL Scripts/Stored_proc.ipynb
+++ b/P4/P4_SQL Scripts/Stored_proc.ipynb
@@ -16,6 +16,132 @@
         {
             "cell_type": "code",
             "source": [
+                "ALTER PROCEDURE GetDriverStatistics\n",
+                "    @DriverId INT\n",
+                "AS\n",
+                "BEGIN\n",
+                "    -- Selecting driver details, total trips, average feedback, and latest trip details\n",
+                "    SELECT \n",
+                "        D.DriverID,\n",
+                "        U.UserFName + ' ' + U.UserLName AS DriverName,\n",
+                "        COUNT(RR.RequestId) AS TotalTrips,\n",
+                "        AVG(F.Rating) AS AverageFeedbackRating, --Commenting out currently. Maybe add a rating column in feedback\n",
+                "        MAX(RR.ReqDateTime) AS LatestTripDateTime,\n",
+                "        MAX(RR.DestinationLocation) AS LatestTripDestination\n",
+                "    FROM Driver D\n",
+                "        -- Joining with the User table to get driver's name\n",
+                "        JOIN [User] U ON D.UserID = U.UserID\n",
+                "        -- Left joining with RideRequest to include drivers with no trips\n",
+                "        LEFT JOIN RideRequest RR ON D.DriverID = RR.VehicleID\n",
+                "        -- Left joining with Feedback to include drivers with no feedback\n",
+                "        LEFT JOIN Feedback F ON D.DriverID = F.DriverID\n",
+                "    WHERE D.DriverID = @DriverId\n",
+                "    -- Grouping results by driver for aggregate functions\n",
+                "    GROUP BY D.DriverID, U.UserFName, U.UserLName;\n",
+                "END;\n",
+                "\n",
+                "\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "c85c35d2-cc47-4dc8-a1ba-9906f379ad9a",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.007"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 3
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "EXEC GetDriverStatistics 1"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "c4b271c6-f280-428e-a160-4199d4958bef",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.005"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 4,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "DriverID"
+                                    },
+                                    {
+                                        "name": "DriverName"
+                                    },
+                                    {
+                                        "name": "TotalTrips"
+                                    },
+                                    {
+                                        "name": "AverageFeedbackRating"
+                                    },
+                                    {
+                                        "name": "LatestTripDateTime"
+                                    },
+                                    {
+                                        "name": "LatestTripDestination"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "DriverID": "1",
+                                    "DriverName": "Alice Johnson",
+                                    "TotalTrips": "2",
+                                    "AverageFeedbackRating": "5",
+                                    "LatestTripDateTime": "2023-11-26 11:00:00.000",
+                                    "LatestTripDestination": "202 Walnut St"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>DriverID</th><th>DriverName</th><th>TotalTrips</th><th>AverageFeedbackRating</th><th>LatestTripDateTime</th><th>LatestTripDestination</th></tr>",
+                            "<tr><td>1</td><td>Alice Johnson</td><td>2</td><td>5</td><td>2023-11-26 11:00:00.000</td><td>202 Walnut St</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 4
+        },
+        {
+            "cell_type": "code",
+            "source": [
                 "CREATE PROCEDURE GetUpcomingServiceRequests\n",
                 "AS\n",
                 "BEGIN\n",
@@ -39,7 +165,7 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "dc197d3a-91f1-4c11-816a-4a9add75d7e7",
+                "azdata_cell_guid": "db582b8e-11ca-4a82-b7fe-78b62878b723",
                 "language": "sql"
             },
             "outputs": [
@@ -58,7 +184,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 5
         },
         {
             "cell_type": "code",
@@ -66,7 +192,7 @@
                 "EXEC GetUpcomingServiceRequests"
             ],
             "metadata": {
-                "azdata_cell_guid": "75053ceb-be0c-4a97-833b-5ddd21951435",
+                "azdata_cell_guid": "d7712b48-b1c5-440f-adc5-058741dfb4e0",
                 "language": "sql"
             },
             "outputs": [
@@ -80,14 +206,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.006"
+                        "text/html": "Total execution time: 00:00:00.012"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 2,
+                    "execution_count": 6,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -168,40 +294,36 @@
                     }
                 }
             ],
-            "execution_count": 2
+            "execution_count": 6
         },
         {
             "cell_type": "code",
             "source": [
-                "CREATE PROCEDURE GetDriverStatistics\n",
-                "    @DriverId INT\n",
+                "CREATE PROCEDURE spCalculateCustomerLoyaltyDiscount \n",
+                "    @CustomerId INT\n",
                 "AS\n",
                 "BEGIN\n",
-                "    -- Selecting driver details, total trips, average feedback, and latest trip details\n",
-                "    SELECT \n",
-                "        D.DriverID,\n",
-                "        U.UserFName + ' ' + U.UserLName AS DriverName,\n",
-                "        COUNT(RR.RequestId) AS TotalTrips,\n",
-                "        -- AVG(F.Message) AS AverageFeedbackRating, Commenting out currently. Maybe add a rating column in feedback\n",
-                "        MAX(RR.ReqDateTime) AS LatestTripDateTime,\n",
-                "        MAX(RR.DestinationLocation) AS LatestTripDestination\n",
-                "    FROM Driver D\n",
-                "        -- Joining with the User table to get driver's name\n",
-                "        JOIN [User] U ON D.UserID = U.UserID\n",
-                "        -- Left joining with RideRequest to include drivers with no trips\n",
-                "        LEFT JOIN RideRequest RR ON D.DriverID = RR.VehicleID\n",
-                "        -- Left joining with Feedback to include drivers with no feedback\n",
-                "        LEFT JOIN Feedback F ON D.DriverID = F.DriverID\n",
-                "    WHERE D.DriverID = @DriverId\n",
-                "    -- Grouping results by driver for aggregate functions\n",
-                "    GROUP BY D.DriverID, U.UserFName, U.UserLName;\n",
-                "END;\n",
-                "\n",
-                "\n",
-                ""
+                "    DECLARE @NumRides INT\n",
+                "    DECLARE @DiscountPercent INT \n",
+                "    \n",
+                "    SELECT @NumRides = COUNT(*)\n",
+                "    FROM RideRequest r\n",
+                "    INNER JOIN Customer c ON r.CustomerID = c.CustomerID\n",
+                "    WHERE c.CustomerID = @CustomerId\n",
+                "        AND r.ReqDateTime BETWEEN DATEADD(YEAR, -1, GETDATE()) AND GETDATE()\n",
+                "            \n",
+                "    SET @DiscountPercent = \n",
+                "        CASE \n",
+                "            WHEN @NumRides > 10 THEN 20\n",
+                "            WHEN @NumRides BETWEEN 5 AND 10 THEN 10\n",
+                "            ELSE 0\n",
+                "        END\n",
+                "        \n",
+                "    SELECT @CustomerId AS CustomerId, @DiscountPercent AS LoyaltyDiscountPercentage  \n",
+                "END"
             ],
             "metadata": {
-                "azdata_cell_guid": "a438d2af-c23e-42df-8942-b723c15824c3",
+                "azdata_cell_guid": "0c7cb98d-6fc7-4b24-b4b3-db6cd1b3f164",
                 "language": "sql"
             },
             "outputs": [
@@ -215,20 +337,20 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.006"
+                        "text/html": "Total execution time: 00:00:00.005"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 7
         },
         {
             "cell_type": "code",
             "source": [
-                "EXEC GetDriverStatistics 1"
+                "EXEC spCalculateCustomerLoyaltyDiscount 1"
             ],
             "metadata": {
-                "azdata_cell_guid": "262410b9-fc00-4c77-ba38-f4443a779204",
+                "azdata_cell_guid": "2277f33f-bdb0-4d78-ac3a-a78a4e3933b1",
                 "language": "sql"
             },
             "outputs": [
@@ -242,55 +364,43 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.007"
+                        "text/html": "Total execution time: 00:00:00.011"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 6,
+                    "execution_count": 8,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
                                 "fields": [
                                     {
-                                        "name": "DriverID"
+                                        "name": "CustomerId"
                                     },
                                     {
-                                        "name": "DriverName"
-                                    },
-                                    {
-                                        "name": "TotalTrips"
-                                    },
-                                    {
-                                        "name": "LatestTripDateTime"
-                                    },
-                                    {
-                                        "name": "LatestTripDestination"
+                                        "name": "LoyaltyDiscountPercentage"
                                     }
                                 ]
                             },
                             "data": [
                                 {
-                                    "DriverID": "1",
-                                    "DriverName": "Alice Johnson",
-                                    "TotalTrips": "1",
-                                    "LatestTripDateTime": "2023-11-26 11:00:00.000",
-                                    "LatestTripDestination": "202 Walnut St"
+                                    "CustomerId": "1",
+                                    "LoyaltyDiscountPercentage": "0"
                                 }
                             ]
                         },
                         "text/html": [
                             "<table>",
-                            "<tr><th>DriverID</th><th>DriverName</th><th>TotalTrips</th><th>LatestTripDateTime</th><th>LatestTripDestination</th></tr>",
-                            "<tr><td>1</td><td>Alice Johnson</td><td>1</td><td>2023-11-26 11:00:00.000</td><td>202 Walnut St</td></tr>",
+                            "<tr><th>CustomerId</th><th>LoyaltyDiscountPercentage</th></tr>",
+                            "<tr><td>1</td><td>0</td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 6
+            "execution_count": 8
         }
     ]
 }
