an after insert trigger now encrypts all data coming into the payments info column. Execution order needs to be finalised

--- a/P4/P4_SQL Scripts/Stored_proc.ipynb
+++ b/P4/P4_SQL Scripts/Stored_proc.ipynb
@@ -91,7 +91,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 4,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -128,13 +127,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>DriverID</th><th>DriverName</th><th>TotalTrips</th><th>AverageFeedbackRating</th><th>LatestTripDateTime</th><th>LatestTripDestination</th></tr>",
-                            "<tr><td>1</td><td>Alice Johnson</td><td>2</td><td>5</td><td>2023-11-26 11:00:00.000</td><td>202 Walnut St</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>DriverID</th><th>DriverName</th><th>TotalTrips</th><th>AverageFeedbackRating</th><th>LatestTripDateTime</th><th>LatestTripDestination</th></tr><tr><td>1</td><td>Alice Johnson</td><td>2</td><td>5</td><td>2023-11-26 11:00:00.000</td><td>202 Walnut St</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 4
@@ -212,7 +207,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 6,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -281,17 +275,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>SerReqId</th><th>VehicleType</th><th>CustomerName</th><th>RequestDateTime</th><th>DueDate</th><th>LastServiceDate</th></tr>",
-                            "<tr><td>1</td><td>SUV</td><td>Alice Johnson</td><td>2023-11-24 10:00:00.000</td><td>2023-12-01</td><td>2023-11-01</td></tr>",
-                            "<tr><td>2</td><td>Compact</td><td>Eva Williams</td><td>2023-11-25 16:00:00.000</td><td>2023-12-05</td><td>2023-11-01</td></tr>",
-                            "<tr><td>3</td><td>Sedan</td><td>John Doe</td><td>2023-11-26 12:00:00.000</td><td>2023-12-10</td><td>2023-11-01</td></tr>",
-                            "<tr><td>4</td><td>Truck</td><td>Bob Smith</td><td>2023-11-27 20:00:00.000</td><td>2023-12-15</td><td>2023-11-01</td></tr>",
-                            "<tr><td>5</td><td>Convertible</td><td>Chris Taylor</td><td>2023-11-29 00:00:00.000</td><td>2023-12-20</td><td>2023-11-01</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>SerReqId</th><th>VehicleType</th><th>CustomerName</th><th>RequestDateTime</th><th>DueDate</th><th>LastServiceDate</th></tr><tr><td>1</td><td>SUV</td><td>Alice Johnson</td><td>2023-11-24 10:00:00.000</td><td>2023-12-01</td><td>2023-11-01</td></tr><tr><td>2</td><td>Compact</td><td>Eva Williams</td><td>2023-11-25 16:00:00.000</td><td>2023-12-05</td><td>2023-11-01</td></tr><tr><td>3</td><td>Sedan</td><td>John Doe</td><td>2023-11-26 12:00:00.000</td><td>2023-12-10</td><td>2023-11-01</td></tr><tr><td>4</td><td>Truck</td><td>Bob Smith</td><td>2023-11-27 20:00:00.000</td><td>2023-12-15</td><td>2023-11-01</td></tr><tr><td>5</td><td>Convertible</td><td>Chris Taylor</td><td>2023-11-29 00:00:00.000</td><td>2023-12-20</td><td>2023-11-01</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 6
@@ -370,7 +356,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 8,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -391,16 +376,168 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>CustomerId</th><th>LoyaltyDiscountPercentage</th></tr>",
-                            "<tr><td>1</td><td>0</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>CustomerId</th><th>LoyaltyDiscountPercentage</th></tr><tr><td>1</td><td>0</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 8
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE CERTIFICATE PaymentCertificate  \n",
+                "   WITH SUBJECT = 'Payment Info certificate';  \n",
+                "GO  \n",
+                "\n",
+                "CREATE SYMMETRIC KEY PaymentKey  \n",
+                "    WITH ALGORITHM = AES_256  \n",
+                "    ENCRYPTION BY CERTIFICATE PaymentCertificate;  \n",
+                "GO  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "585f5dce-59a7-4f30-a3c9-1e037fdcf073",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.195"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 3
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE MASTER KEY ENCRYPTION BY   \n",
+                "PASSWORD = 'AmeySatwe23';"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "a6fedde4-7c88-4366-9567-76a5e738f72f"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.006"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 1
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "OPEN SYMMETRIC KEY PaymentKey  \n",
+                "   DECRYPTION BY CERTIFICATE PaymentCertificate;  \n",
+                "\n",
+                "-- Encrypt the value in column CardNumber using the  \n",
+                "-- symmetric key CreditCards_Key11.  \n",
+                "-- Save the result in column CardNumber_Encrypted.    \n",
+                "\n",
+                "-- alter table Customer\n",
+                "-- alter column PaymentInfo varbinary(160)\n",
+                "\n",
+                "UPDATE Customer\n",
+                "SET PaymentInfo = ENCRYPTBYKEY('PaymentKey',\"PaymentInfo\")\n",
+                "\n",
+                "-- Verify the encryption.  \n",
+                "-- First, open the symmetric key with which to decrypt the data.  \n",
+                "\n",
+                "-- OPEN SYMMETRIC KEY PaymentKey  \n",
+                "--    DECRYPTION BY CERTIFICATE PaymentCertificate;  \n",
+                "-- GO  \n",
+                "\n",
+                "-- Now list the original card number, the encrypted card number,  \n",
+                "-- and the decrypted ciphertext. If the decryption worked,  \n",
+                "-- the original number will match the decrypted number.  \n",
+                "\n",
+                "Select * from Customer\n",
+                "-- SELECT Convert(varchar, DecryptByCert(Cert_ID('PaymentInfPaymentCertificateo_Cert'), PaymentInfo)) as PaymentInfo \n",
+                "-- FROM Customer;\n",
+                "\n",
+                ""
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "3eee0ec6-8493-4c78-b540-87efa5bfea11"
+            },
+            "outputs": [
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 8116, Level 16, State 1, Line 11\nArgument data type varchar is invalid for argument 1 of EncryptByKey function.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.002"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 15
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "01e1d890-8b67-459d-91fd-c3cfe8250fed"
+            },
+            "outputs": [
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 2627, Level 14, State 1, Line 1\nViolation of PRIMARY KEY constraint 'PK__Customer__A4AE64B83CFC436A'. Cannot insert duplicate key in object 'dbo.Customer'. The duplicate key value is (1).",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "The statement has been terminated."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.006"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 9
         }
     ]
 }
