INSERT statements added

--- a/P4/P4_SQL Scripts/Stored_proc.ipynb
+++ b/P4/P4_SQL Scripts/Stored_proc.ipynb
@@ -38,10 +38,7 @@
                 "    WHERE D.DriverID = @DriverId\n",
                 "    -- Grouping results by driver for aggregate functions\n",
                 "    GROUP BY D.DriverID, U.UserFName, U.UserLName;\n",
-                "END;\n",
-                "\n",
-                "\n",
-                ""
+                "END;"
             ],
             "metadata": {
                 "azdata_cell_guid": "c85c35d2-cc47-4dc8-a1ba-9906f379ad9a",
@@ -492,8 +489,8 @@
             "outputs": [
                 {
                     "output_type": "error",
-                    "evalue": "Msg 8116, Level 16, State 1, Line 11\nArgument data type varchar is invalid for argument 1 of EncryptByKey function.",
                     "ename": "",
+                    "evalue": "Msg 8116, Level 16, State 1, Line 11\nArgument data type varchar is invalid for argument 1 of EncryptByKey function.",
                     "traceback": []
                 },
                 {
@@ -518,8 +515,8 @@
             "outputs": [
                 {
                     "output_type": "error",
-                    "evalue": "Msg 2627, Level 14, State 1, Line 1\nViolation of PRIMARY KEY constraint 'PK__Customer__A4AE64B83CFC436A'. Cannot insert duplicate key in object 'dbo.Customer'. The duplicate key value is (1).",
                     "ename": "",
+                    "evalue": "Msg 2627, Level 14, State 1, Line 1\nViolation of PRIMARY KEY constraint 'PK__Customer__A4AE64B83CFC436A'. Cannot insert duplicate key in object 'dbo.Customer'. The duplicate key value is (1).",
                     "traceback": []
                 },
                 {
