--- a/P4/ALL_SQL_Scripts/Notebook-2(TaxiMangementSystem).ipynb
+++ b/P4/ALL_SQL_Scripts/Notebook-2(TaxiMangementSystem).ipynb
@@ -31,33 +31,79 @@
                     "hide_input"
                 ]
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.084"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 1
         },
         {
             "cell_type": "code",
             "source": [
-                "-- Use the master database\n",
-                "USE master;\n",
-                "GO\n",
+                "-- -- Use the master database\n",
+                "-- USE master;\n",
+                "-- GO\n",
                 "\n",
-                "-- Set the TaxiManagementSystem database to single-user mode with immediate rollback\n",
-                "ALTER DATABASE TaxiManagementSystem\n",
-                "SET SINGLE_USER WITH ROLLBACK IMMEDIATE;\n",
-                "GO\n",
+                "-- -- Set the TaxiManagementSystem database to single-user mode with immediate rollback\n",
+                "-- ALTER DATABASE TaxiManagementSystem\n",
+                "-- SET SINGLE_USER WITH ROLLBACK IMMEDIATE;\n",
+                "-- GO\n",
                 "\n",
-                "-- Drop the TaxiManagementSystem database\n",
-                "DROP DATABASE [TaxiManagementSystem];"
+                "-- -- Drop the TaxiManagementSystem database\n",
+                "-- DROP DATABASE [TaxiManagementSystem];"
             ],
             "metadata": {
                 "language": "sql",
                 "azdata_cell_guid": "7494ff71-d3bd-431f-b721-2eff6e808e1c",
-                "tags": [
-                    "hide_input"
-                ]
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 5011, Level 14, State 5, Line 6\nUser does not have permission to alter database 'TaxiManagementSystem', the database does not exist, or the database is not in a state that allows access checks.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 5069, Level 16, State 1, Line 6\nALTER DATABASE statement failed.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 3701, Level 11, State 1, Line 11\nCannot drop the database 'TaxiManagementSystem', because it does not exist or you do not have permission.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.007"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "code",
@@ -96,16 +142,14 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Switch to the 'sample' database\n",
-                "USE [sample];\n",
-                "GO"
+                "-- -- Switch to the 'sample' database\n",
+                "-- USE [sample];\n",
+                "-- GO"
             ],
             "metadata": {
                 "language": "sql",
                 "azdata_cell_guid": "c8e611a0-d095-430f-8e90-5d5f1e917d38",
-                "tags": [
-                    "hide_input"
-                ]
+                "tags": []
             },
             "outputs": [],
             "execution_count": null
